--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
   @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
   html {
     scroll-behavior: smooth;
-    scrollbar-width: thin;
+    
 }
 body{background-color:
-    hsl(32, 100%, 89%);
+    hsl(0, 0%, 100%);
     margin: 0%;
     zoom: 150%;
 
@@ -51,20 +51,22 @@ h1,h3{
 }
 .navbar a{
     text-decoration: none;
-    color: hsl(0, 0%, 0%);
+    color: hsl(0, 0%, 100%);
     transition: all 300ms ease;
     
 }
 #name:hover,.navbar a:hover{
     color: hsl(0, 0%, 0%);
     transition: all 300ms ease;
-    background-color: hsl(40, 100%, 96%);
+    background-color: hsla(0, 0%, 100%, 0.589);
     cursor: none;
     padding: 4px;
     border-radius: 5px;
     
     box-shadow: 2px 2px 5px hsl(230, 93%, 83%),-2px -2px 5px hsl(40, 95%, 70%),-2px 2px 5px hsl(40, 95%, 70%),2px -2px 5px hsl(40, 95%, 70%);
 }
+
+
 #name{
     font-size: 15px;
     transition: all 300ms ease;
@@ -93,7 +95,7 @@ h1,h3{
     justify-content: center;
     zoom: 125%;
     gap: 7%;
-    margin-bottom: 130px;
+    margin-bottom: 0px;
 }
 #p_name{
     display: flex;
@@ -106,7 +108,7 @@ h1,h3{
 
 #hello,#desi{
     margin: 0px;
-    color: hsl(0, 0%, 25%);
+    color: hsl(0, 1%, 79%);
     font-size: smaller;
     font-family: 'Open Sans', sans-serif;
 
@@ -119,7 +121,7 @@ h1,h3{
 #pn,#pln{
     font-family: 'Open Sans', sans-serif;
     font-size: large;
-    margin: 0px; color: hsl(0, 0%, 0%)
+    margin: 0px; color: hsl(0, 100%, 99%)
 }
 #desi{
     text-decoration: underline hsl(0, 0%, 47%);
@@ -142,9 +144,9 @@ h1,h3{
     color: white;
 }
 #cv{
-    background-color:hsl(40, 100%, 96%) ;
-    border: solid 1px hsl(0, 0%, 16%);
-    color: hsl(0, 0%, 16%);
+    background-color:hsla(39, 100%, 96%, 0.13) ;
+    border: solid 1px hsla(39, 100%, 96%, 0.13);
+    color: hsl(0, 0%, 100%);
 }
 
 #cv:hover{
@@ -158,7 +160,7 @@ h1,h3{
     transition: all 300ms ease;
 }
 #cm{
-    background-color:hsl(0, 0%, 24%) ;
+    background-color:hsla(0, 0%, 24%, 0.466) ;
     border: solid 1px hsl(0, 0%, 24%);
     color: whitesmoke;
 }
@@ -328,9 +330,9 @@ h1,h3{
     transition: all 300ms ease;
     padding: 5px;
     background-color: hsl(32, 80%, 94%);
-    border-color: hsl(0, 0%, 0%);
+    
     border-radius: 10px;
-    border: solid 1.5px;
+    border: none;
     color: rgb(0, 0, 0);
     padding: 10px;
 }
@@ -425,6 +427,7 @@ td:hover,th:hover {
     transform: scale(1.1);
     opacity: 1; 
     z-index: 1; 
+    text-shadow: 3px 3px 2px rgb(255, 255, 255);
 }
 .pro-cont:hover .pro-img {
     transform: scale(1.01);
@@ -443,7 +446,7 @@ td:hover,th:hover {
     flex-direction: column;
     max-width: fit-content;
     gap: 20px;
-    background-color: antiquewhite;
+    background-color: rgba(255, 220, 159, 0.397);
     padding: 20px;
     border-radius: 20px;
 }
@@ -461,3 +464,64 @@ td:hover,th:hover {
     margin-top: 10px;
     border-radius: 13px;
 }
+.background{
+    background-image: url(images/IMG-20231018-WA0011.jpg);
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+    
+    
+    
+}
+.grad{
+    margin-bottom: 100px;
+}
+.grad {
+    position: relative;
+  }
+  
+  .grad::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px; /* Adjust the height of the fade effect as needed */
+    background: linear-gradient(to bottom, 
+    rgba(255, 255, 255, 0),
+    rgba(255, 255, 255, 0.03),
+    rgba(255, 255, 255, 0.05),
+    rgba(255, 255, 255, 0.1),
+    rgba(255, 255, 255, 0.2),
+    rgba(255, 255, 255, 0.3),
+    rgba(255, 255, 255, 0.4),
+    rgba(255, 255, 255, 0.5),
+    rgba(255, 255, 255, 0.6),
+    rgba(255, 255, 255, 0.7),
+    rgba(255, 255, 255, 0.8),
+    rgba(255, 255, 255, 0.9),
+    rgba(255, 255, 255, 1)
+);
+
+  }
+  
+  input,textarea{
+    padding: 10px;
+  }
+  
+  #fst{
+background-color: rgba(155, 206, 250, 0.63);
+  }
+  #snd{
+background-color: rgba(247, 211, 167, 0.685);
+  }
+
+  #p1{
+    background-color: hsla(189, 100%, 70%, 0.384);
+  }
+  #p2{
+    background-color: hsl(21, 58%, 91%);
+  }
+  #p3{
+    background-color: rgba(77, 133, 101, 0.53);
+  }
