--- a/style.css
+++ b/style.css
@@ -607,3 +607,29 @@ background-color: rgba(247, 211, 167, 0.685);
         width: max-content;
     }
 }
+
+#exp1{
+    margin: 0px 160px 210px 160px; 
+    zoom: 125%;
+}
+
+@media screen and (max-width: 768px) {
+    .main-c{
+        width:fit-content;
+        
+    }
+    #exp1{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    #about{
+        transform: scale(1.2);
+    }
+    .navbar{
+        zoom: 100%;
+    }
+    .profile_cont{
+        zoom: 95%;
+    }
+}
