added profile photo animation  v0.5

--- a/style.css
+++ b/style.css
@@ -77,24 +77,31 @@ h1,h3{
     transition: all 300ms ease;
 }
 
-#profile_pic{
-    height: 190px;
-    width: 190px;
-    border-radius: 400px;
-    transition: all 100ms ease-in;
-    will-change: transform;
+.hero-img{
+    height: 12rem;
+    width: 12rem;
+    background-image: url(images/profile.jpg);
+    background-position: center;
+    background-size: cover;
+    border: 3px solid rgb(0, 0, 0);
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    -webkit-animation: morph 8s ease-in-out infinite;
+    animation: morph 8s ease-in-out infinite;
 }
-#profile_pic:hover{
-    transform: scale(1.05);
-    opacity: 1; 
-    z-index: 1;
-
-     transition: all 400ms ease-out;
-     cursor: none;
-     box-shadow: 3px 3px 10px hsl(230, 93%, 83%);
-
+@keyframes morph{
+    0% {
+        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    }
+    25%{
+        border-radius: 40% 50% 50% 50%/55% 30% 70% 40%;
+    }
+    50% {
+        border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+    }
+    100% {
+        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    }
 }
-
 .profile_cont{
     display: flex;
     justify-content: center;
