Added more Navagation features and optimised the layout

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ h1,h3{
     border: 3px solid rgb(0, 0, 0);
     border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
     animation: morph 6s ease-in-out infinite alternate;
-    transition: border-radius 300ms ease-out;
+    transition: border-radius 300ms ease;
 }
 
 @keyframes morph {
@@ -118,9 +118,9 @@ h1,h3{
 
 .hero-img:hover {
     border-radius: 50% 50% 50% 50% / 50% 50% 50% 50% !important;
-    /* animation-play-state: paused !important; Ensure that the animation is paused on hover */
-    transition: border-radius 300ms ease-out;
-    /* Apply a transition for smoother hover effect */
+   
+    transition: border-radius 300ms ease;
+
 }
 .hero-b{
     height: 12rem;
@@ -597,8 +597,12 @@ background-color: rgba(247, 211, 167, 0.685);
   }
 
   #about{
-    margin: 0px 160px 210px 160px;  
+    margin: 0px 100px 105px 100px;  
     zoom: 115%;
+    padding-top: 20px;
+    padding-right: 50px;
+    padding-left: 50px;
+    position: relative;
   }
   .img-p{
     display: flex; 
@@ -606,7 +610,9 @@ background-color: rgba(247, 211, 167, 0.685);
     max-width: 30%; 
   }
   #projects{
-    margin: 0px 160px 0px 160px;
+    margin: 0px 0px 0px 0px;
+    padding: 20px 50px 50px 50px;
+    position: relative;
   }
 
   
@@ -672,8 +678,12 @@ background-color: rgba(247, 211, 167, 0.685);
 }
 
 #exp1{
-    margin: 0px 160px 210px 160px; 
+    margin: 105px 100px 210px 100px; 
+    padding-top: 60px;
     zoom: 125%;
+    padding-right: 50px;
+    padding-left: 50px;
+    position: relative;
 }
 
 @media screen and (max-width: 768px) {
@@ -695,4 +705,50 @@ background-color: rgba(247, 211, 167, 0.685);
     .profile_cont{
         zoom: 95%;
     }
+}
+
+.nava1{
+    position: absolute;
+    right: 3.7rem;
+    bottom: 1.5rem;
+    transform: scale(1.5);
+    cursor: pointer;
+}
+.nava{
+    position: absolute;
+    right: -3.3rem;
+    bottom: -1.5rem;
+    transform: scale(1.5);
+    cursor: pointer;
+   
+}
+.nava2{
+    position: absolute;
+    right: -3.3rem;
+    bottom: -7.5rem;
+    transform: scale(1.5);
+    cursor: pointer;
+   
+}
+.nava3{
+    position: absolute;
+    right: 3.7rem;
+    bottom: -0.5rem;
+    transform: scale(1.5);
+    cursor: pointer;
+   
+}
+.nava4{
+    position: absolute;
+    right: 3.7rem;
+    bottom: -0.5rem;
+    transform: scale(1.5);
+    cursor: pointer;
+   
+}
+
+#contac{
+    margin: 100px 0px 80px 0px; 
+    padding: 20px 50px 50px 50px;
+    position: relative;
 }
