--- a/style.css
+++ b/style.css
@@ -1,37 +1,25 @@
 
-  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
- 
-
-  
+  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap'); 
   html {
     scroll-behavior: smooth;
     
 }
-body{background-color:
+body{
+    background-color:
     hsl(0, 0%, 100%);
     margin: 0%;
     zoom: 150%;
 
 }
- 
-
 body::-webkit-scrollbar {
     width: 7px;
 }
-
 body::-webkit-scrollbar-thumb {
     height: 56px;
     border-radius: 8px;
     border: 4px solid hsl(0, 0%, 67%);
     background-clip: content-box;
     background-color: hsl(0, 0%, 67%);
-}
-.navbar, .links{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 5vh;    
-        
 }
 p{
     font-family: 'Open Sans', sans-serif;
@@ -42,7 +30,14 @@ h1,h3{
     margin: 0%;
     font-size: medium;
 }
-
+/* Nav-Bar Styles */
+.navbar, .links{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 5vh;    
+        
+}
 .navbar{
     margin-left: 10px;
     margin-right: 10px;
@@ -70,25 +65,22 @@ h1,h3{
     
     box-shadow: 2px 2px 5px hsl(230, 93%, 83%),-2px -2px 5px hsl(40, 95%, 70%),-2px 2px 5px hsl(40, 95%, 70%),2px -2px 5px hsl(40, 95%, 70%);
 }
-
-
 #name{
     font-size: 15px;
     transition: all 300ms ease;
 }
-
+/* Profile Styles */
 .hero-img {
     height: 12rem;
     width: 12rem;
     background-image: url(images/profile.jpg);
     background-position: center;
     background-size: cover;
-    border: 3px solid rgb(0, 0, 0);
+    border: 3px solid rgb(255, 255, 255);
     border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
     animation: morph 6s ease-in-out infinite alternate;
     transition: border-radius 300ms ease;
 }
-
 @keyframes morph {
     0% {
         border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
@@ -115,10 +107,9 @@ h1,h3{
         transition: border-radius 300ms ease-out;
     }
 }
-
 .hero-img:hover {
     border-radius: 50% 50% 50% 50% / 50% 50% 50% 50% !important;
-   
+   background-image: url(images/profile\ -\ Copy.jpg);
     transition: border-radius 300ms ease;
 
 }
@@ -135,7 +126,7 @@ h1,h3{
 }
 .hero-b:hover{
     animation: rot linear infinite 1s;
-    background-image: linear-gradient(45deg ,hsl(0, 0%, 100%), hsl(0, 0%, 0%));
+    background-image: linear-gradient(45deg ,hsl(0, 100%, 72%), hsl(258, 100%, 68%));
     height: 12.7rem;
     width: 12.7rem;
 }
@@ -173,7 +164,6 @@ h1,h3{
     justify-content: center;
     zoom: 130%;
 }
-
 #hello,#desi{
     margin: 0px;
     color: hsl(0, 1%, 79%);
@@ -200,7 +190,6 @@ h1,h3{
     display: flex;
     gap: 0.5rem;
 }
-
 .p_buttons button{
     font-size: 7px;
     font-weight: 200;
@@ -216,7 +205,6 @@ h1,h3{
     border: solid 1px hsla(39, 100%, 96%, 0.13);
     color: hsl(0, 0%, 100%);
 }
-
 #cv:hover{
     transform: scale(1.05);
     opacity: 1; 
@@ -232,7 +220,6 @@ h1,h3{
     border: solid 1px hsl(0, 0%, 24%);
     color: whitesmoke;
 }
-
 #cm:hover{
     transform: scale(1.05);
     opacity: 1; 
@@ -242,7 +229,7 @@ h1,h3{
     cursor: pointer;
     box-shadow: 2px 2px 10px hsl(230, 93%, 83%);
 }
-
+/* About me Styles */
 #abtme{
     text-align: center;
     font-size: 23px;
@@ -261,7 +248,6 @@ h1,h3{
     width: 70%;
 
 }
-
 .abtp{
     width: 250px; 
     height:250px; 
@@ -269,7 +255,6 @@ h1,h3{
     transition: all 300ms ease-in-out;
     margin-bottom: 15px;
 }
-
 .abtp:hover{
     transition: all 300ms ease-in-out;
     transform: scale(1.05);
@@ -284,7 +269,6 @@ h1,h3{
    margin-bottom: 10px;
     margin-top: auto;
 }
-
 #exp,#edu{
     border: 1.5px solid black;
     border-radius: 10px;
@@ -306,7 +290,6 @@ h1,h3{
     opacity: 1; 
     z-index: 1;
 }
-
 .main-c{
     display: flex;
    
@@ -323,7 +306,6 @@ h1,h3{
     gap: 10px;
     width: 70%;
 }
-
 .last-cont{
     display: flex;
     flex-wrap: wrap;
@@ -373,7 +355,6 @@ h1,h3{
     margin-bottom: 40px;
     font-weight:900;
 }
-
 .pro-img{
     width: 300px;
     height: 300px;
@@ -413,8 +394,8 @@ h1,h3{
     color: whitesmoke;
     cursor: pointer;
     box-shadow: 2px 2px 10px hsl(230, 93%, 83%);
-    transition: all 300ms ease;}
-
+    transition: all 300ms ease;
+}
 #ll-p{
     font-size: 10px;
     color: hsl(0, 0%, 31%);
@@ -435,7 +416,6 @@ h1,h3{
     text-underline-offset: 1rem;
     cursor: pointer;
 }
-
 .ll-cont{
 display: flex;
 flex-direction: column;
@@ -484,7 +464,6 @@ tr:nth-of-type(2n+1){
 td,th,.exp-a,#exp {
     transition: transform 0.3s ease-in-out; 
 }
-
 td:hover,th:hover {
     transform: scale(1.1);
     opacity: 1; 
@@ -507,8 +486,6 @@ td:hover,th:hover {
                 -2px 2px 5px  hsl(0, 0%, 100%),
                 2px -2px 5px  hsl(0, 0%, 100%);
 }
-
-
 .container{
     display: flex;
     flex-direction: column;
@@ -543,13 +520,10 @@ td:hover,th:hover {
     
     
 }
-.grad{
-    margin-bottom: 100px;
-}
 .grad {
     position: relative;
+    margin-bottom: 100px;
   }
-  
   .grad::after {
     content: "";
     position: absolute;
@@ -574,18 +548,15 @@ td:hover,th:hover {
 );
 
   }
-  
   input,textarea{
     padding: 10px;
   }
-  
   #fst{
 background-color: rgba(155, 206, 250, 0.63);
   }
   #snd{
 background-color: rgba(247, 211, 167, 0.685);
   }
-
   #p1{
     background-color: hsla(189, 100%, 70%, 0.384);
   }
@@ -595,7 +566,6 @@ background-color: rgba(247, 211, 167, 0.685);
   #p3{
     background-color: rgba(77, 133, 101, 0.53);
   }
-
   #about{
     margin: 0px 100px 105px 100px;  
     zoom: 115%;
@@ -613,16 +583,12 @@ background-color: rgba(247, 211, 167, 0.685);
     margin: 0px 0px 0px 0px;
     padding: 20px 50px 50px 50px;
     position: relative;
-  }
-
-  
-    
+  }  
 @media screen and (max-width : 1800px){
     #about{
         zoom: 100%;
     }
 }
-
 @media screen and (max-width : 1600px){
     #about{
         zoom: 90%;
@@ -639,7 +605,6 @@ background-color: rgba(247, 211, 167, 0.685);
         transform: scale(0.8);
     }
 }
-
 @media screen and (max-width : 1300px){
     .profile_cont{
         zoom: 100%;  
@@ -676,7 +641,6 @@ background-color: rgba(247, 211, 167, 0.685);
         width: max-content;
     }
 }
-
 #exp1{
     margin: 105px 100px 210px 100px; 
     padding-top: 60px;
@@ -685,7 +649,6 @@ background-color: rgba(247, 211, 167, 0.685);
     padding-left: 50px;
     position: relative;
 }
-
 @media screen and (max-width: 768px) {
     .main-c{
         width:fit-content;
@@ -706,7 +669,6 @@ background-color: rgba(247, 211, 167, 0.685);
         zoom: 95%;
     }
 }
-
 .nava1{
     position: absolute;
     right: 3.7rem;
@@ -746,7 +708,6 @@ background-color: rgba(247, 211, 167, 0.685);
     cursor: pointer;
    
 }
-
 #contac{
     margin: 100px 0px 80px 0px; 
     padding: 20px 50px 50px 50px;
