--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 
   @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap'); 
+
+
+  @property --G_angle{
+    syntax: "<angle>";
+    initial-value: 0deg;
+    inherits: false;
+  }
   html {
     scroll-behavior: smooth;
     
@@ -279,6 +286,33 @@ h1,h3{
     flex-direction: column;
     width: 100%;
     transition: all 300ms ease-in-out;
+    position: relative;
+    opacity: 1;
+    background-color: rgb(255, 255, 255);
+}
+
+#exp::after,#exp::before,#edu::after,#edu::before{
+    content: "";
+  position: absolute;
+  inset: 1rem;
+  z-index: -10;
+  background-image: conic-gradient( 
+  from var(--G_angle),  
+  #2ac3ff,rgb(162, 0, 255), #ffe260,rgb(246, 209, 255),#2ac3ff,rgb(162, 0, 255), #ffe260,rgb(246, 209, 255));
+  border-radius: inherit;
+  filter: blur(2rem);
+  animation: 4.2s rota ease infinite ;
+  display: none;
+  
+}
+
+@keyframes rota {
+    from{
+        --G_angle : 0deg;
+    }
+    to{
+        --G_angle : 360deg;
+    }
 }
 #exp:hover,#edu:hover{
     box-shadow: 2px 2px 5px hsl(209, 100%, 70%),
@@ -289,6 +323,24 @@ h1,h3{
     transform: scale(1.05);
     opacity: 1; 
     z-index: 1;
+    background-color: rgba(0, 0, 0, 0.247);
+    color: rgb(255, 255, 255);
+}
+#exp:hover::after,
+#exp:hover::before,
+#edu:hover::after,
+#edu:hover::before {
+    display: block;
+}
+.abt-p{
+    font-size: 9px; 
+    margin: 0; 
+    color: hsl(0, 0%, 39%);
+    transition: all 300ms ease-in-out;
+}
+#exp:hover .abt-p,#edu:hover .abt-p{
+    color: aliceblue;
+    transition: all 300ms ease-in-out;
 }
 .main-c{
     display: flex;
@@ -318,27 +370,18 @@ h1,h3{
 }
 .exp-a i,h3,p{
     font-size: 13px;
+    
 }
 .e-head{
     margin-top: 15px;
-    color: hsl(0, 0%, 31%);
+    color: hsl(0, 0%, 29%);
     font-size: larger;
     margin-bottom: 10px;
+  
+    text-decoration: underline;
+    text-underline-offset: 0.3rem;
 }
-#mtc2{
-    font-size: 10px;
-    color: hsl(0, 0%, 39%);
-    position: relative;
-    top:55px;
-    left: 110px;
-}
-#mtc1{
-    font-size: 10px;
-    color: hsl(0, 0%, 39%);
-    position: relative;
-    top:65px;
-    left: 9.5px;
-}
+
 .generic-p{
     font-size: 9px; 
     margin: 0; 
@@ -378,10 +421,10 @@ h1,h3{
     font-weight: 200;
     transition: all 300ms ease;
     padding: 5px;
-    background-color: hsl(32, 80%, 94%);
+    background-color: hsla(0, 0%, 100%, 0.205);
     
     border-radius: 10px;
-    border: none;
+    border: 1px solid hsla(0, 0%, 0%, 0.568);
     color: rgb(0, 0, 0);
     padding: 10px;
 }
@@ -395,6 +438,7 @@ h1,h3{
     cursor: pointer;
     box-shadow: 2px 2px 10px hsl(230, 93%, 83%);
     transition: all 300ms ease;
+    transform: scale(1.1);
 }
 #ll-p{
     font-size: 10px;
@@ -481,10 +525,10 @@ td:hover,th:hover {
     opacity: 1;
     z-index: 1;
     transition: all 300ms ease-in-out;
-    box-shadow: 2px 2px 5px hsl(25.26deg 12.42% 70%),
-                -2px -2px 5px  hsl(0, 0%, 100%),
-                -2px 2px 5px  hsl(0, 0%, 100%),
-                2px -2px 5px  hsl(0, 0%, 100%);
+    box-shadow: 2px 2px 5px hsl(0, 0%, 71%),
+                -2px -2px 5px  hsl(25.26deg 12.42% 70%),
+                -2px 2px 5px  hsl(25.26deg 12.42% 70%),
+                2px -2px 5px  hsl(25.26deg 12.42% 70%);
 }
 .container{
     display: flex;
@@ -558,7 +602,7 @@ background-color: rgba(155, 206, 250, 0.63);
 background-color: rgba(247, 211, 167, 0.685);
   }
   #p1{
-    background-color: hsla(189, 100%, 70%, 0.384);
+    background-color:hsl(44deg 48.48% 80.87% / 60%);
   }
   #p2{
     background-color: hsl(21, 58%, 91%);
@@ -641,14 +685,6 @@ background-color: rgba(247, 211, 167, 0.685);
         width: max-content;
     }
 }
-#exp1{
-    margin: 105px 100px 210px 100px; 
-    padding-top: 60px;
-    zoom: 125%;
-    padding-right: 50px;
-    padding-left: 50px;
-    position: relative;
-}
 @media screen and (max-width: 768px) {
     .main-c{
         width:fit-content;
@@ -680,7 +716,7 @@ background-color: rgba(247, 211, 167, 0.685);
     position: absolute;
     right: -3.3rem;
     bottom: -1.5rem;
-    transform: scale(1.5);
+    transform: scale(1.4);
     cursor: pointer;
    
 }
@@ -688,7 +724,7 @@ background-color: rgba(247, 211, 167, 0.685);
     position: absolute;
     right: -3.3rem;
     bottom: -7.5rem;
-    transform: scale(1.5);
+    transform: scale(1.3);
     cursor: pointer;
    
 }
@@ -704,12 +740,20 @@ background-color: rgba(247, 211, 167, 0.685);
     position: absolute;
     right: 3.7rem;
     bottom: -0.5rem;
-    transform: scale(1.5);
+    transform: scale(1.6);
     cursor: pointer;
    
 }
 #contac{
     margin: 100px 0px 80px 0px; 
     padding: 20px 50px 50px 50px;
+    position: relative;
+}
+#exp1{
+    margin: 105px 100px 210px 100px; 
+    padding-top: 60px;
+    zoom: 125%;
+    padding-right: 50px;
+    padding-left: 50px;
     position: relative;
 }
