--- a/style.css
+++ b/style.css
@@ -579,7 +579,7 @@ td:hover,th:hover {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 100px; /* Adjust the height of the fade effect as needed */
+    height: 100px; /* Adjust the height of the Slide effect as needed */
     background: linear-gradient(to bottom, 
     rgba(255, 255, 255, 0),
     rgba(255, 255, 255, 0.03),
@@ -781,7 +781,7 @@ background-color: rgba(247, 211, 167, 0.685);
     flex-direction: column;
     border-radius: 15px;
   
-  transition: all 800ms ease;
+    
     justify-content: space-around;
     user-select: none;
     cursor: pointer;
@@ -789,6 +789,7 @@ background-color: rgba(247, 211, 167, 0.685);
 .pop-up:focus{
     transform: scale(1.1);
     transition: all 800ms ease;
+  
 }
 .pop-up div{
     font-size: larger;
@@ -798,6 +799,28 @@ display: flex;
 gap: 10px;
 
 }
+
+@keyframes Fade_Top {
+    from{
+       transform: scale(0);
+       transform-origin: top;
+    }
+    to{
+        transform: scale(1);
+    }
+}
+@keyframes Fade_Down {
+    from{
+       transform: scale(1);
+       
+    }
+    to{
+        transform: scale(0);
+        transform-origin: bottom;
+        
+    }
+}
+
 #l-but{
     width: 100px; 
     border-radius: 10px; 
@@ -810,4 +833,71 @@ gap: 10px;
 #l-but:hover{
     background-color: hsl(0, 0%, 58%);
     transition: 300ms all ease;
+}
+
+.eptest{
+   display: none;
+   position: absolute;
+   z-index: 100;
+   width: 100px;
+   height: 50px;
+   right: -80px;
+   top: -60px;
+   background-color: #727272d2;
+ padding: 7px;
+ border: solid 1px black;
+   border-radius: 13px 13px 10px 0px ;
+   font-size: 7px;
+  color: rgb(255, 255, 255);
+   transition: all 300ms ease-in-out !important;
+   animation: Slide 0.7s ease 1;
+   opacity: 1;
+   box-shadow: 0px 3px 10px hsl(0, 0%, 100%);
+   
+}
+.exp-a:hover{
+    text-shadow: none;
+}
+.exp-a i{
+    transform: scale(1.2);
+}
+.exp-a:hover .eptest{
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 300ms ease-in-out !important;
+}
+@keyframes Slide {
+    from {
+        transform: scaleX(0.1);
+        transform-origin: left; 
+    }
+    to {
+        transform: scaleX(1);
+        transform-origin: left; 
+    }
+}
+@keyframes Deslide {
+    from {
+        transform: scaleX(0.1);
+        transform-origin: left; 
+    }
+    to {
+        transform: scaleX(1);
+        transform-origin: left; 
+    }
+}
+#eptest1{
+    right: -91px;
+    top: -60px;
+   
+}
+#eptest2{
+    right: -105px;
+    top: -60px;
+   
+}
+#eptestA{
+    font-size: 6px;
 }
