--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
     margin: 0%;
     zoom: 150%;
     user-select: none;
+    
   
 }
 body::-webkit-scrollbar {
@@ -52,7 +53,7 @@ h1,h3{
 .navbar{
     margin-left: 10px;
     margin-right: 10px;
-   
+    animation: Slide ease 1s 1;
     margin-bottom: 100px;
     zoom: 160%;
 }
@@ -64,7 +65,7 @@ h1,h3{
     text-decoration: none;
     color: hsl(0, 0%, 100%);
     transition: all 300ms ease;
-    
+   
 }
 #name:hover,.navbar a:hover{
     color: hsl(0, 0%, 0%);
@@ -91,6 +92,7 @@ h1,h3{
     border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
     animation: morph 6s ease-in-out infinite alternate;
     transition: border-radius 300ms ease;
+
 }
 @keyframes morph {
     0% {
@@ -174,7 +176,11 @@ h1,h3{
     flex-direction: column;
     justify-content: center;
     zoom: 130%;
+    
 }
+
+
+
 #hello,#desi{
     margin: 0px;
     color: hsl(0, 1%, 79%);
@@ -186,11 +192,13 @@ h1,h3{
 }
 #hello{
     font-size: 12px;
+    animation: Slide ease 0.7s 1 .1s;
 }
 #pn,#pln{
     font-family: 'Open Sans', sans-serif;
     font-size: large;
-    margin: 0px; color: hsl(0, 100%, 99%)
+    margin: 0px; color: hsl(0, 100%, 99%);
+    animation: Slide ease 0.6s 1 .1s;
 }
 #desi{
     text-decoration: underline hsl(0, 0%, 47%);
@@ -215,6 +223,7 @@ h1,h3{
     background-color:hsla(39, 100%, 96%, 0.13) ;
     border: solid 1px hsla(39, 100%, 96%, 0.13);
     color: hsl(0, 0%, 100%);
+    
 }
 #cv:hover{
     transform: scale(1.05);
@@ -565,7 +574,7 @@ td:hover,th:hover {
     background-size: cover;
     width: 100%;
     overflow-x: hidden;
-    
+
     
     
 }
@@ -803,7 +812,7 @@ gap: 10px;
 @keyframes Fade_Top {
     from{
        transform: scale(0);
-       transform-origin: top;
+       transform-origin: top left;
     }
     to{
         transform: scale(1);
@@ -816,7 +825,7 @@ gap: 10px;
     }
     to{
         transform: scale(0);
-        transform-origin: bottom;
+        transform-origin: top left;
         
     }
 }
@@ -872,6 +881,7 @@ gap: 10px;
     from {
         transform: scaleX(0.1);
         transform-origin: left; 
+        transform-style: preserve-3d;
     }
     to {
         transform: scaleX(1);
@@ -900,4 +910,34 @@ gap: 10px;
 }
 #eptestA{
     font-size: 6px;
+}
+
+.vi{
+    position: fixed;
+    z-index: 100;
+    background-color: rgba(58, 58, 58, 0.747);
+    width: 1270px;
+    height: 650px;
+    top: 0px;
+    left: 0px;
+    display: none;
+}
+.vi i {
+
+    float: right;
+    display: inline;
+    margin-right: 10px;
+    font-size: 50px;
+    margin-left: 100%;
+    color: aliceblue;
+    font-weight: 10px;
+    cursor: pointer;
+}
+
+.vi video{
+    height: auto;
+    width: 1000px;
+   display: inline;
+   margin-left: 120px;
+    border-radius: 15px;
 }
