--- a/media.css
+++ b/media.css
@@ -16,6 +16,9 @@
   .content-items1{
     height: 50%;
   }
+  .Experience-content{
+    transform: scale(0.9);
+  }
 }
 @media screen and  (max-width : 1201px) and (min-width: 1000px){
     html{
@@ -95,22 +98,3 @@
   }
 }
 
-@media screen and (max-height:700px) and (min-height:300px){
-  .profile-image,.profile-text{
-      transform: scale(0.8);
-  }
-.Design{
-  height: 653vh;
-}
-
-  .Home,.aboutme,.Experience,.projects{
-
-  margin-bottom: 200px;
-}
-.aboutme-content{
-  transform: scale(0.7);
-}
-.content-items1{
-  height: 50%;
-}
-}
