--- a/style.css
+++ b/style.css
@@ -1098,3 +1098,156 @@ cursor: pointer;
 #norm{
     background-image: linear-gradient(135deg,rgb(28, 28, 28) 50%,rgb(0 245 211) 51%);
 }
+
+
+.more-projects{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 99;
+    background-color:   var(--orginal-bg);
+    top: 0px;
+    right: -100%;
+    color: var(--sub-accent);
+    overflow-y: scroll;
+    overflow-x: visible;
+    img:hover{
+        /* opacity: 0.7; */
+        cursor: pointer;
+        transition: all 300ms ease;
+        filter: contrast(2);
+    }
+    h5{
+        font-size: 40px;
+        font-family: monospace;
+        text-align: center;
+        height: 5%;
+        background-color: #75000000;
+        text-decoration: underline;
+    }
+    .mp-content{
+        background-color: rgba(64, 224, 208, 0);
+        height: 95%;
+        padding: 20px;
+        h3{
+            margin-bottom: 10px;
+        }
+        .major-projects{
+            width: 100%;
+            background-color: var(--main-accent);
+            height: 25%;
+            border-radius: 10px;
+            padding: 1%;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                border-radius: inherit;
+            }
+            
+        }
+        .mp-close{
+            width: 30px;
+            height: 30px;
+            background-color: white;
+            position: absolute;
+            top: 6px;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            right: 6px;
+            z-index: 100;
+            background-color: black;
+            color: white;
+            cursor: pointer;
+
+        }
+        .minor-projects{
+            width: 100%;
+           
+            background-color: var(--main-accent);
+            height: 65%;
+            border-radius: 10px;
+            padding: 1%;
+            display: grid;
+            grid-template-columns: repeat(6,1fr);
+            grid-template-rows: repeat(2,50%);
+            justify-items: center;
+            gap:10px;
+            .mp-card{
+                width: 100%;
+                height: 100%;
+                border-radius: 15px;
+                background-color: white;
+            }
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+                border-radius: inherit;
+            }
+        }
+        .mp-card{
+            width: 15%;
+            height: 100%;
+            border-radius: 15px;
+            background-color: white;
+        }
+    }
+}
+.mp-button{
+    position: absolute;
+    background-color:var(--main-accent);
+    z-index: 100;
+    top: 20.4%;
+    left: 97%;
+    height: 634px;
+    width: 50px;
+    border-radius: 100% 0px 0px 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+    font-size: 59px;
+    font-weight: 600;
+    font-family: monospace;
+    cursor: pointer;
+   
+}
+
+@keyframes mp-deslide {
+    0%{
+        right: 0%;
+    }
+    100%{
+        right: -100%;
+    }
+}
+@keyframes mpb-deslide {
+    0%{
+        left: -2.6%;
+    }
+    100%{
+        left: 97%;
+    }
+}
+@keyframes mp-slide {
+    0%{
+        right: -100%;
+    }
+    100%{
+        right: 0%;
+    }
+}
+@keyframes mpb-slide {
+    0%{
+        left: 97%;
+    }
+    100%{
+        left: -2.6%;
+    }
+}
